tests/sksl/errors/InvalidExtensionDirective.glsl
### Compilation failed:

error: 1: invalid #extension directive
#extension foo : disable disable
^^^^^^^^^^
error: 1: no type named 'disable'
#extension foo : disable disable
                         ^^^^^^^
2 errors
